--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,19 +15,6 @@
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/medium_margin">
 
-            <TextView
-                android:id="@+id/titleEditProfile"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/medium_margin"
-                android:layout_marginTop="@dimen/medium_margin"
-                android:text="@string/s_user_info"
-                android:textSize="@dimen/titile_size"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/inputTextFullName"
@@ -36,10 +23,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/medium_margin"
                 android:hint="@string/s_name"
-                android:layout_marginTop="16sp"
+                android:layout_marginTop="@dimen/medium_margin"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/titleEditProfile">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
