--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,19 +1,18 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.MoviesDbApplication" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">#B00020</item>
+    <style name="Base.Theme.MoviesDbApplication" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="colorPrimary">#aaa</item>
         <item name="colorPrimaryDark">#800016</item>
-        <item name="colorAccent">#FF4081</item>
+        <item name="colorAccent">#dddaaa</item>
         <item name="cardViewStyle">@style/CardViewStyle</item>
         <item name="android:fontFamily">sans-serif-light</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorControlHighlight">@color/white</item>
 
     </style>
 
-    <!-- Estilo para el CardView en modo nocturno -->
     <style name="CardViewStyle" parent="Widget.MaterialComponents.CardView">
-        <!-- Personaliza el CardView según tus necesidades en modo nocturno -->
         <item name="cardBackgroundColor">#2C2C2C</item>
         <item name="cardElevation">4dp</item>
-        <!-- Otros atributos personalizados aquí -->
     </style>
 </resources>
