--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_profile_fragment"
-        android:name="com.example.moviesdbapplication.ui.fragments.ProfileFragment"
+        android:name="com.example.moviesdbapplication.presentation.view.fragments.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" >
         <action
@@ -19,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/nav_movies_fragment"
-        android:name="com.example.moviesdbapplication.ui.fragments.MoviesFragment"
+        android:name="com.example.moviesdbapplication.presentation.view.fragments.MoviesFragment"
         android:label="fragment_movies"
         tools:layout="@layout/fragment_movies" >
         <action
@@ -31,7 +31,7 @@
     </fragment>
     <fragment
         android:id="@+id/nav_map_fragment"
-        android:name="com.example.moviesdbapplication.ui.fragments.MapFragment"
+        android:name="com.example.moviesdbapplication.presentation.view.fragments.MapFragment"
         android:label="fragment_map"
         tools:layout="@layout/fragment_map" >
         <action
@@ -43,6 +43,6 @@
     </fragment>
     <fragment
         android:id="@+id/nav_gallery_fragment"
-        android:name="com.example.moviesdbapplication.ui.fragments.GalleryFragment"
+        android:name="com.example.moviesdbapplication.presentation.view.fragments.GalleryFragment"
         android:label="GalleryFragment" />
 </navigation>
